--- a/docs/dev-log-2026-02-14.md
+++ b/docs/dev-log-2026-02-14.md
@@ -71,3 +71,25 @@ git add .
 git commit -m "feat: Initial project structure and npm init"
 git push origin main
 ```
+
+## 5. 인력 관리 기능 구현 (User Management)
+
+### 5.1. 라이브러리 설치
+- `gray-matter`: Markdown Frontmatter 파싱을 위해 설치.
+- `commander`: 강력한 CLI 명령어 인터페이스 구축을 위해 설치.
+```sh
+npm install gray-matter commander
+```
+
+### 5.2. 핵심 로직 및 CLI 명령어 구현
+- `data/people` 폴더 생성: 사용자 데이터 파일 저장 위치.
+- `src/core/userService.js` 생성: `addUser` 함수를 구현하여, `gray-matter`를 통해 사용자 정보를 Frontmatter로 갖는 Markdown 파일을 생성하는 핵심 로직 담당.
+- `src/cli/commands/user.js` 생성: `commander`를 사용하여 `user add <name>` 명령어를 정의하고 `userService.addUser` 함수를 호출.
+- `src/cli/main.js` 생성: `commander` 프로그램을 초기화하고 모든 CLI 명령어를 등록하는 진입점 역할.
+
+### 5.3. 기능 테스트
+- 아래 명령어를 실행하여 "Hans Man" 사용자 추가 기능 테스트.
+```sh
+node src/cli/main.js user add "Hans Man" --email "hans@example.com"
+```
+- **결과:** `data/people/Hans-Man.md` 파일이 정상적으로 생성됨을 확인.
