--- a/docs/dev-log-2026-02-14.md
+++ b/docs/dev-log-2026-02-14.md
@@ -81,15 +81,14 @@ git push origin main
 npm install gray-matter commander
 ```
 
-### 5.2. 핵심 로직 및 CLI 명령어 구현
+### 5.2. `user add` 기능 구현
 - `data/people` 폴더 생성: 사용자 데이터 파일 저장 위치.
 - `src/core/userService.js` 생성: `addUser` 함수를 구현하여, `gray-matter`를 통해 사용자 정보를 Frontmatter로 갖는 Markdown 파일을 생성하는 핵심 로직 담당.
 - `src/cli/commands/user.js` 생성: `commander`를 사용하여 `user add <name>` 명령어를 정의하고 `userService.addUser` 함수를 호출.
 - `src/cli/main.js` 생성: `commander` 프로그램을 초기화하고 모든 CLI 명령어를 등록하는 진입점 역할.
+- **테스트:** `node src/cli/main.js user add "Hans Man" --email "hans@example.com"` 명령으로 `data/people/Hans-Man.md` 파일 생성 확인.
 
-### 5.3. 기능 테스트
-- 아래 명령어를 실행하여 "Hans Man" 사용자 추가 기능 테스트.
-```sh
-node src/cli/main.js user add "Hans Man" --email "hans@example.com"
-```
-- **결과:** `data/people/Hans-Man.md` 파일이 정상적으로 생성됨을 확인.
+### 5.3. `user list` 기능 구현
+- `src/core/userService.js` 수정: `listUsers` 함수를 추가하여 `data/people` 디렉토리의 모든 사용자 파일을 읽고 파싱하여 배열로 반환.
+- `src/cli/commands/user.js` 수정: `user list` 명령어를 추가하고 `userService.listUsers`를 호출하여 결과를 `console.table`로 출력.
+- **테스트:** `node src/cli/main.js user list` 명령으로 사용자 목록이 테이블 형태로 출력됨을 확인.
