docs: Update dev log for web-based architecture shift

--- a/docs/dev-log-2026-02-14.md
+++ b/docs/dev-log-2026-02-14.md
@@ -11,84 +11,81 @@
 - 산출물 관리
 - 개발 소스 점검
 
-## 2. 아키텍처 및 기술 스택 결정
+## 2. 아키텍처 결정: 웹 기반 클라이언트-서버 모델로 전환
 
-- **핵심 아키텍처:** 파일 기반 시스템. Markdown 파일의 **Frontmatter**를 활용하여 동적 데이터 구조 구현.
-- **데이터 저장:** `data` 폴더 내에 Markdown 파일(.md)로 프로젝트 데이터(인력, 작업 등)를 저장.
-- **언어/환경:** Node.js
-- **UI:** 초기에는 CLI(명령어 기반 인터페이스)로 개발, 향후 Electron/Tauri 등으로 GUI 확장 가능.
+### 2.1. 기존 CLI + 파일 기반 아키텍처의 한계 인식
+- 초기 제안된 CLI + 로컬 파일 기반 방식은 단일 사용자 환경에서는 적합하나, 다중 사용자 동시 접속 및 데이터 동기화 요구사항을 충족시키기 어려움.
+
+### 2.2. 클라이언트-서버 아키텍처 도입 결정
+- 여러 사용자의 동시 접근 및 데이터 동기화를 위해 중앙 집중식 데이터베이스 및 API 서버 도입 결정.
+- "외부망과 연결되지 않은 환경" 제약 조건에 따라 내부 네트워크에 서버 호스팅.
+- "동적 데이터 구조" 요구사항을 만족하기 위해 NoSQL 문서 데이터베이스 채택.
+
+### 2.3. 웹 기반으로 클라이언트 변경 결정
+- 배포 용이성, 사용자 경험(UI/UX), 크로스 플랫폼 지원을 위해 CLI 클라이언트 대신 웹 기반 클라이언트를 선택.
+- 각 사용자는 웹 브라우저를 통해 내부 네트워크에 호스팅된 웹 애플리케이션에 접속.
+
+## 3. 기술 스택 결정
+
+- **프론트엔드 (클라이언트):** React (또는 Vue/Svelte)
+- **백엔드 (API 서버):** Node.js (Express)
+- **데이터베이스:** MongoDB (NoSQL 문서 데이터베이스)
 - **버전 관리:** Git 및 GitHub
 
-## 3. 초기 환경 설정 (Initial Setup)
+## 4. 초기 환경 설정 및 백엔드 구성 (Initial Setup & Backend)
 
-### 3.1. GitHub 리포지토리 생성 및 로컬 복제
+### 4.1. GitHub 리포지토리 설정 및 구조 변경
 
-- GitHub에 `my-project-manager` 비공개(Private) 리포지토리 생성.
-- 로컬 PC에 Git 설치 및 사용자 정보(`user.name`, `user.email`) 설정.
-- `git clone` 명령으로 로컬에 리포지토리 복제.
+- GitHub에 `my-project-manager` 비공개(Private) 리포지토리 유지.
+- 기존 CLI 관련 `src` 및 `data` 디렉토리 삭제.
+- 새로운 모노레포(Monorepo) 구조 채택: `backend/`, `frontend/` 디렉토리 생성.
+  - `data/people/Hans-Man.md` 파일은 백업 후 삭제.
 
-### 3.2. 프로젝트 폴더 구조 생성
+### 4.2. 백엔드 프로젝트 초기화 및 의존성 설치
 
-- ` 관심사의 분리` 원칙에 따라 폴더 구조 설계.
-- 생성된 폴더:
-  - `data/`
-  - `docs/`
-  - `src/cli/commands/`
-  - `src/core/`
-  - `src/utils/`
-  - `tests/`
+- `backend/` 디렉토리 내에서 `npm init -y`로 Node.js 프로젝트 초기화.
+- 필요한 패키지 설치: `express`, `mongoose`, `cors`, `dotenv`.
 
-### 3.3. Node.js 프로젝트 초기화 및 `.gitignore` 생성
+### 4.3. 백엔드 서버 기본 설정 (`backend/server.js`)
 
-- `npm init -y` 명령을 실행하여 `package.json` 생성.
-- `node_modules`, `.env` 등 불필요한 파일/폴더를 Git 추적에서 제외하기 위해 `.gitignore` 파일 생성.
+- Express 애플리케이션 초기화 및 미들웨어 설정 (CORS, JSON 파싱).
+- `dotenv`를 사용하여 `.env` 파일에서 환경 변수 로드.
+- MongoDB 연결 설정: `mongoose`를 사용하여 `MONGO_URI` 환경 변수 값으로 데이터베이스 연결 시도.
+- 기본 라우트 (`/`) 설정: 서버 작동 여부 확인용 "Hello World" 응답.
+- 서버 포트 설정 (`PORT` 환경 변수 사용).
 
-## 4. 주요 실행 명령어 요약
+### 4.4. 환경 변수 파일 생성 (`backend/.env`)
+
+- 백엔드 연결 정보(예: `PORT`, `MONGO_URI`)를 위한 `.env` 파일 생성 및 플레이스홀더 값 지정.
+
+### 4.5. `.gitignore` 업데이트
+
+- `backend/node_modules/` 및 `backend/.env`를 `.gitignore`에 추가하여 Git 추적에서 제외.
+
+## 5. 주요 실행 명령어 요약 (최신화)
 
 ```sh
-# Git 리포지토리 복제
+# Git 리포지토리 복제 (최초 1회)
 git clone https://github.com/hans-man/my-project-manager.git C:\Users\angel\my-project-manager
 
-# 폴더 생성
-mkdir data
-mkdir src
-mkdir tests
-mkdir docs
-mkdir src/cli
-mkdir src/core
-mkdir src/utils
-mkdir src/cli/commands
+# 기존 CLI/파일 기반 관련 파일 제거 및 백엔드/프론트엔드 폴더 생성
+# (data/people/Hans-Man.md는 백업 후 삭제)
+Remove-Item -Recurse -Force data
+Remove-Item -Recurse -Force src
+mkdir backend
+mkdir frontend
 
-# Node.js 프로젝트 초기화
+# 백엔드 프로젝트 초기화 및 의존성 설치
+cd backend
 npm init -y
+npm install express mongoose cors dotenv
+cd .. # 다시 프로젝트 루트로 이동
 
-# Git 사용자 정보 설정
-git config --global user.email "your_email@example.com"
-git config --global user.name "Your Name"
+# .gitignore 업데이트
+# (backend/node_modules/ 및 backend/.env 추가)
 
 # Git 변경사항 커밋 및 푸시
 git add .
-git commit -m "feat: Initial project structure and npm init"
+git commit -m "feat: Shift to web-based architecture (backend setup)"
 git push origin main
 ```
-
-## 5. 인력 관리 기능 구현 (User Management)
-
-### 5.1. 라이브러리 설치
-- `gray-matter`: Markdown Frontmatter 파싱을 위해 설치.
-- `commander`: 강력한 CLI 명령어 인터페이스 구축을 위해 설치.
-```sh
-npm install gray-matter commander
-```
-
-### 5.2. `user add` 기능 구현
-- `data/people` 폴더 생성: 사용자 데이터 파일 저장 위치.
-- `src/core/userService.js` 생성: `addUser` 함수를 구현하여, `gray-matter`를 통해 사용자 정보를 Frontmatter로 갖는 Markdown 파일을 생성하는 핵심 로직 담당.
-- `src/cli/commands/user.js` 생성: `commander`를 사용하여 `user add <name>` 명령어를 정의하고 `userService.addUser` 함수를 호출.
-- `src/cli/main.js` 생성: `commander` 프로그램을 초기화하고 모든 CLI 명령어를 등록하는 진입점 역할.
-- **테스트:** `node src/cli/main.js user add "Hans Man" --email "hans@example.com"` 명령으로 `data/people/Hans-Man.md` 파일 생성 확인.
-
-### 5.3. `user list` 기능 구현
-- `src/core/userService.js` 수정: `listUsers` 함수를 추가하여 `data/people` 디렉토리의 모든 사용자 파일을 읽고 파싱하여 배열로 반환.
-- `src/cli/commands/user.js` 수정: `user list` 명령어를 추가하고 `userService.listUsers`를 호출하여 결과를 `console.table`로 출력.
-- **테스트:** `node src/cli/main.js user list` 명령으로 사용자 목록이 테이블 형태로 출력됨을 확인.
