docs: Update dev log for frontend setup

--- a/docs/dev-log-2026-02-14.md
+++ b/docs/dev-log-2026-02-14.md
@@ -27,7 +27,7 @@
 
 ## 3. 기술 스택 결정
 
-- **프론트엔드 (클라이언트):** React (또는 Vue/Svelte)
+- **프론트엔드 (클라이언트):** React (create-react-app 사용)
 - **백엔드 (API 서버):** Node.js (Express)
 - **데이터베이스:** MongoDB (NoSQL 문서 데이터베이스)
 - **버전 관리:** Git 및 GitHub
@@ -62,7 +62,22 @@
 
 - `backend/node_modules/` 및 `backend/.env`를 `.gitignore`에 추가하여 Git 추적에서 제외.
 
-## 5. 주요 실행 명령어 요약 (최신화)
+## 5. 프론트엔드 구성 (Frontend Setup)
+
+### 5.1. React 프로젝트 초기화
+- `frontend/` 디렉토리 내에서 `npx create-react-app .` 명령으로 React 프로젝트 초기화.
+- 유지 보수 용이성을 위해 `create-react-app` 선택.
+
+### 5.2. 의존성 설치
+- 백엔드 API 요청을 위한 `axios` 라이브러리 설치.
+
+### 5.3. 백엔드 통신 설정 (`frontend/src/App.js`)
+- `frontend/src/App.js` 파일을 수정하여 컴포넌트 마운트 시 백엔드의 기본 라우트(`http://localhost:5000` 또는 프로덕션 환경에서는 동일 오리진)에서 메시지를 가져와 화면에 표시하도록 구현.
+
+### 5.4. `.gitignore` 업데이트
+- `frontend/node_modules/` 및 `frontend/.env`를 루트 `.gitignore`에 추가하여 Git 추적에서 제외.
+
+## 6. 주요 실행 명령어 요약 (최신화)
 
 ```sh
 # Git 리포지토리 복제 (최초 1회)
@@ -82,10 +97,18 @@ npm install express mongoose cors dotenv
 cd .. # 다시 프로젝트 루트로 이동
 
 # .gitignore 업데이트
-# (backend/node_modules/ 및 backend/.env 추가)
+# (backend/node_modules/, backend/.env, frontend/node_modules/, frontend/.env 추가)
+
+# 프론트엔드 프로젝트 초기화 및 의존성 설치
+cd frontend
+# npx create-react-app . --use-npm # --use-npm 플래그를 사용하여 npm 사용 명시 (자동으로 npm 사용)
+& "C:\Program Files\nodejs\npx.cmd" --yes create-react-app .
+& "C:\Program Files\nodejs\npm.cmd" install axios
+cd .. # 다시 프로젝트 루트로 이동
 
 # Git 변경사항 커밋 및 푸시
+# (이전 커밋에 백엔드 설정 포함)
 git add .
-git commit -m "feat: Shift to web-based architecture (backend setup)"
+git commit -m "feat: Frontend setup (React with create-react-app)"
 git push origin main
 ```
