docs: Update dev log for backend User Management API

--- a/docs/dev-log-2026-02-14.md
+++ b/docs/dev-log-2026-02-14.md
@@ -77,7 +77,24 @@
 ### 5.4. `.gitignore` 업데이트
 - `frontend/node_modules/` 및 `frontend/.env`를 루트 `.gitignore`에 추가하여 Git 추적에서 제외.
 
-## 6. 주요 실행 명령어 요약 (최신화)
+## 6. 백엔드 사용자 관리 API 구현 (Backend User Management API)
+
+### 6.1. User 모델 정의 (`backend/models/User.js`)
+- `mongoose.Schema`를 사용하여 사용자 정보(name, email, team, createdAt)를 정의.
+- `User` 모델 생성 및 내보내기.
+
+### 6.2. 사용자 라우트 정의 (`backend/routes/userRoutes.js`)
+- `express.Router`를 사용하여 사용자 CRUD(Create, Read, Update, Delete)를 위한 API 엔드포인트 정의.
+  - `GET /api/users`: 모든 사용자 조회
+  - `GET /api/users/:id`: 특정 사용자 조회
+  - `POST /api/users`: 새 사용자 생성
+  - `PUT /api/users/:id`: 특정 사용자 정보 업데이트
+  - `DELETE /api/users/:id`: 특정 사용자 삭제
+
+### 6.3. 서버에 라우트 통합 (`backend/server.js`)
+- `backend/server.js` 파일에 `userRoutes`를 임포트하고 `/api/users` 경로로 미들웨어에 추가하여 API 엔드포인트 활성화.
+
+## 7. 주요 실행 명령어 요약 (최신화)
 
 ```sh
 # Git 리포지토리 복제 (최초 1회)
@@ -110,5 +127,10 @@ cd .. # 다시 프로젝트 루트로 이동
 # (이전 커밋에 백엔드 설정 포함)
 git add .
 git commit -m "feat: Frontend setup (React with create-react-app)"
+git push origin main
+
+# 백엔드 사용자 관리 API 구현 커밋 및 푸시
+git add .
+git commit -m "feat: Backend User Management API (CRUD)"
 git push origin main
 ```
