--- a/docs/dev-log-2026-02-14.md
+++ b/docs/dev-log-2026-02-14.md
@@ -94,7 +94,20 @@
 ### 6.3. 서버에 라우트 통합 (`backend/server.js`)
 - `backend/server.js` 파일에 `userRoutes`를 임포트하고 `/api/users` 경로로 미들웨어에 추가하여 API 엔드포인트 활성화.
 
-## 7. 주요 실행 명령어 요약 (최신화)
+## 7. 프론트엔드 사용자 관리 컴포넌트 구현 (Frontend User Management Components)
+
+### 7.1. 컴포넌트 디렉토리 생성
+- `frontend/src/components` 디렉토리 생성.
+
+### 7.2. 사용자 목록 컴포넌트 (`frontend/src/components/UserList.js`)
+- 백엔드 `/api/users` 엔드포인트에서 사용자 목록을 가져와 `useState`로 관리.
+- 로딩 상태와 에러 처리.
+- 가져온 사용자 목록을 `ul`/`li` 형태로 화면에 표시.
+
+### 7.3. App.js에 UserList 컴포넌트 통합
+- `frontend/src/App.js` 파일을 수정하여 기존 "Hello World" 메시지 대신 `UserList` 컴포넌트를 렌더링.
+
+## 8. 주요 실행 명령어 요약 (최신화)
 
 ```sh
 # Git 리포지토리 복제 (최초 1회)
@@ -132,5 +145,10 @@ git push origin main
 # 백엔드 사용자 관리 API 구현 커밋 및 푸시
 git add .
 git commit -m "feat: Backend User Management API (CRUD)"
+git push origin main
+
+# 프론트엔드 사용자 목록 컴포넌트 구현 커밋 및 푸시
+git add .
+git commit -m "feat: Frontend UserList component"
 git push origin main
 ```
