docs: Update dev log for Frontend AddUserForm

--- a/docs/dev-log-2026-02-14.md
+++ b/docs/dev-log-2026-02-14.md
@@ -104,7 +104,12 @@
 - 로딩 상태와 에러 처리.
 - 가져온 사용자 목록을 `ul`/`li` 형태로 화면에 표시.
 
-### 7.3. App.js에 UserList 컴포넌트 통합
+### 7.3. 사용자 추가 양식 컴포넌트 (`frontend/src/components/AddUserForm.js`)
+- 이름, 이메일, 팀을 입력받는 폼 컴포넌트 생성.
+- `axios.post`를 사용하여 `/api/users`로 새 사용자 데이터를 전송.
+- `UserList` 컴포넌트에 통합되어 사용자 추가 시 목록 자동 새로고침 기능 구현.
+
+### 7.4. App.js에 UserList 컴포넌트 통합
 - `frontend/src/App.js` 파일을 수정하여 기존 "Hello World" 메시지 대신 `UserList` 컴포넌트를 렌더링.
 
 ## 8. 주요 실행 명령어 요약 (최신화)
@@ -150,5 +155,10 @@ git push origin main
 # 프론트엔드 사용자 목록 컴포넌트 구현 커밋 및 푸시
 git add .
 git commit -m "feat: Frontend UserList component"
+git push origin main
+
+# 프론트엔드 사용자 추가 양식 컴포넌트 구현 커밋 및 푸시
+git add .
+git commit -m "feat: Frontend AddUserForm and integration into UserList"
 git push origin main
 ```
