docs: Update dev log for Nodemon integration

--- a/docs/dev-log-2026-02-14.md
+++ b/docs/dev-log-2026-02-14.md
@@ -112,7 +112,16 @@
 ### 7.4. App.js에 UserList 컴포넌트 통합
 - `frontend/src/App.js` 파일을 수정하여 기존 "Hello World" 메시지 대신 `UserList` 컴포넌트를 렌더링.
 
-## 8. 주요 실행 명령어 요약 (최신화)
+## 8. 백엔드 개발 경험 개선 (Nodemon 통합)
+
+### 8.1. Nodemon 설치
+- `backend/` 디렉토리 내에서 `npm install nodemon --save-dev` 명령으로 `nodemon` 설치.
+
+### 8.2. `package.json` 스크립트 추가
+- `backend/package.json` 파일에 `start` 스크립트와 함께 `dev` 스크립트 추가: `"dev": "nodemon server.js"`.
+- 이제 `npm run dev` 명령으로 백엔드 서버를 실행하면 파일 변경 시 자동으로 서버 재시작.
+
+## 9. 주요 실행 명령어 요약 (최신화)
 
 ```sh
 # Git 리포지토리 복제 (최초 1회)
@@ -129,6 +138,7 @@ mkdir frontend
 cd backend
 npm init -y
 npm install express mongoose cors dotenv
+npm install nodemon --save-dev # nodemon 설치
 cd .. # 다시 프로젝트 루트로 이동
 
 # .gitignore 업데이트
@@ -160,5 +170,10 @@ git push origin main
 # 프론트엔드 사용자 추가 양식 컴포넌트 구현 커밋 및 푸시
 git add .
 git commit -m "feat: Frontend AddUserForm and integration into UserList"
+git push origin main
+
+# Nodemon 통합 커밋 및 푸시
+git add .
+git commit -m "feat: Add nodemon for automatic backend server restarts"
 git push origin main
 ```
